fix: Fixed essentials jumping around when switching workspaces, b=(no-bug), c=tabs

--- a/src/zen/tabs/zen-tabs/vertical-tabs.css
+++ b/src/zen/tabs/zen-tabs/vertical-tabs.css
@@ -1249,6 +1249,8 @@
 
 /* Container for essential items (often pinned/favorite tabs) */
 .zen-essentials-container {
+  will-change: transform;
+
   padding-bottom: var(--zen-toolbox-padding);
   overflow: hidden;
   gap: calc(var(--zen-toolbox-padding) - 2px);
